syntax = "proto3";

package protocol;

option java_package = "org.tron.protos.contract"; //Specify the name of the package that generated the Java file
//option java_outer_classname = "ExchangeTransactionContract"; //Specify the class name of the generated Java file
option go_package = "github.com/tronprotocol/grpc-gateway/core";

message ExchangeTransactionContract {
    bytes owner_address = 1;
    int64 exchange_id = 2;
    bytes token_id = 3;
    int64 quant = 4;
    int64 expected = 5;
}